--- a/style.css
+++ b/style.css
@@ -42,7 +42,10 @@ h1{
     flex-wrap: wrap;
     justify-content: space-around;
 }
-
+a{
+    text-decoration: none;
+    color: black;
+}
 footer{
     padding: 0;
     margin: 0;
